@@ -127,6 +127,7 @@ ArangoClient::ArangoClient ()
   : _configFile(),
     _tempPath(),
     _logLevel("info"),
+    _logLocalTime(false),
     _quiet(false),
 
     _colorOptions(false),
@@ -187,6 +188,7 @@ void ArangoClient::setupGeneral (ProgramOptionsDescription& description) {
 
   loggingOptions
     ("log.level,l", &_logLevel,  "log level")
+    ("log.use-local-time", "log local dates and times in log messages")
   ;
 
   description
@@ -318,9 +320,14 @@ void ArangoClient::parse (ProgramOptions& options,
   if (! options.parse(description, argc, argv)) {
     LOG_FATAL_AND_EXIT("%s", options.lastError().c_str());
   }
+  
+  if (options.has("log.use-local-time")) {
+    _logLocalTime = true;
+  }
 
   // setup the logging
   TRI_SetLogLevelLogging(_logLevel.c_str());
+  TRI_SetUseLocalTimeLogging(_logLocalTime);
   TRI_CreateLogAppenderFile("-", 0, TRI_LOG_SEVERITY_UNKNOWN, false);
   TRI_SetLineNumberLogging(false);
   TRI_SetThreadIdentifierLogging(false);
@@ -400,7 +407,7 @@ void ArangoClient::parse (ProgramOptions& options,
     // if a username is specified explicitly, assume authentication is desired
     _disableAuthentication = false;
   }
-
+  
   // check if have a password
   _hasPassword = options.has("server.password")
               || _disableAuthentication
