@@ -425,6 +425,12 @@ namespace triagens {
         string _logLevel;
 
 ////////////////////////////////////////////////////////////////////////////////
+/// @brief use local dates & times in log messages
+////////////////////////////////////////////////////////////////////////////////
+        
+        bool _logLocalTime;
+
+////////////////////////////////////////////////////////////////////////////////
 /// @brief quiet start
 ////////////////////////////////////////////////////////////////////////////////
 
