@@ -138,13 +138,19 @@ void TRI_SetLogSeverityLogging (char const* severities);
 /// @brief sets the output prefix
 ////////////////////////////////////////////////////////////////////////////////
 
-void TRI_SetPrefixLogging (char const* prefix);
+void TRI_SetPrefixLogging (char const*);
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief sets the thread identifier visibility
 ////////////////////////////////////////////////////////////////////////////////
 
-void TRI_SetThreadIdentifierLogging (bool show);
+void TRI_SetThreadIdentifierLogging (bool);
+
+////////////////////////////////////////////////////////////////////////////////
+/// @brief use local time?
+////////////////////////////////////////////////////////////////////////////////
+
+void TRI_SetUseLocalTimeLogging (bool);
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief sets the line number visibility
