@@ -136,6 +136,35 @@ ssize_t getline (char** lineptr, size_t* n, FILE* stream) {
 #endif
 
 ////////////////////////////////////////////////////////////////////////////////
+/// @brief safe localtime
+////////////////////////////////////////////////////////////////////////////////
+
+void TRI_localtime (time_t tt, struct tm* tb) {
+#ifdef TRI_HAVE_LOCALTIME_R
+
+  localtime_r(&tt, tb);
+
+#else
+
+#ifdef TRI_HAVE_LOCALTIME_S
+
+  localtime_s(tb, &tt);
+
+#else
+
+  struct tm* tp;
+
+  tp = localtime(&tt);
+
+  if (tp != NULL) {
+    memcpy(tb, tp, sizeof(struct tm));
+  }
+
+#endif
+#endif
+}
+
+////////////////////////////////////////////////////////////////////////////////
 /// @brief safe gmtime
 ////////////////////////////////////////////////////////////////////////////////
 
