@@ -63,6 +63,12 @@ ssize_t getline (char**, size_t*, FILE*);
 #endif
 
 ////////////////////////////////////////////////////////////////////////////////
+/// @brief safe localtime
+////////////////////////////////////////////////////////////////////////////////
+
+void TRI_localtime (time_t, struct tm*);
+
+////////////////////////////////////////////////////////////////////////////////
 /// @brief safe gmtime
 ////////////////////////////////////////////////////////////////////////////////
 
